<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userDetails.user_detailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Personal_Details"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="14dp"
            android:layout_margin="10dp"
            android:background="@drawable/phone_input_bg"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/name"
                android:drawablePadding="5dp"
                android:hint="@string/u_name"
                android:background="@null"
                android:inputType="text"
                android:importantForAutofill="no" />

        </LinearLayout>

        <TextView
            android:id="@+id/name_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:textColor="#FE0000"
            android:gravity="center"
            android:visibility="gone"
            android:drawablePadding="4dp"
            android:text="@string/name_error"
            app:drawableStartCompat="@drawable/ic_baseline_info_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="14dp"
            android:layout_margin="10dp"
            android:background="@drawable/phone_input_bg"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/gender"
                app:tint="#66696C"
                android:contentDescription="TODO" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/Gender"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"/>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:layout_margin="10dp"
            android:padding="15dp">

            <TextView
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/white"
                android:onClick="Submit"
                android:text="@string/submit"/>

            <ProgressBar
                android:id="@+id/submit_progress"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:visibility="gone"
                android:layout_centerInParent="true"/>

        </RelativeLayout>


    </LinearLayout>

</ScrollView>