<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.AlreadyCreate">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/phonelogo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verifyPhone"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:text="@string/instruction"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="6dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/phone_input_bg"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/countryCode_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="number"
                    android:maxLength="10"
                    />

                <ImageView
                    android:id="@+id/btn_clear"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="10dp"
                    android:visibility="gone"
                    android:background="@drawable/cross"
                    android:contentDescription="TODO" />

            </FrameLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/number_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:textColor="#FE0000"
            android:visibility="gone"
            android:textSize="12sp"
            android:gravity="center"
            android:drawablePadding="4dp"
            android:text="@string/number_error"
            app:drawableStartCompat="@drawable/ic_baseline_info_24" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="15dp">

            <TextView
                android:id="@+id/send_otp_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:onClick="sendOTP"
                android:textColor="@color/white"
                android:text="@string/sendOtp"/>

            <ProgressBar
                android:id="@+id/otp_progress"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:visibility="gone"
                android:layout_centerInParent="true"/>

        </RelativeLayout>


    </LinearLayout>

</ScrollView>